Prevented display from overflowing

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    overflow-y: hidden;
 }
 
 .buttons-container {
